--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <center>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="about.php"> About </a>
+                    <a href="about.html"> About </a>
                 </li>
                 <li class="nav-item">
-                    <a href="collaterals.php"> Collaterals </a>
+                    <a href="collaterals.html"> Collaterals </a>
                 </li>
                 <li class="nav-item">
-                    <a href = "graphicdesigns.php"> Graphic Designs </a>
+                    <a href = "graphicdesigns.html"> Graphic Designs </a>
                 </li>
                 <li class="nav-item">
-                    <a href="photography.php"> Photography </a>
+                    <a href="photography.html"> Photography </a>
                 </li>
                 <li class="nav-item">
-                    <a href="videos.php"> Videos </a>
+                    <a href="videos.html"> Videos </a>
                 </li>
             </ul>
         </center>
