--- a/graphicdesigns.html
+++ b/graphicdesigns.html
@@ -1,6 +1,42 @@
-<?php require_once('index.php'); ?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rachelle Anne Copina</title>
 
-<div id="graphicdesigns" class="container-fluid">
+    <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
+
+    <link rel="stylesheet" href="assets/styles/main.css">
+</head>
+<body>
+    <div id="web-title" class="container-fluid">
+        <p class="web-title-text"> Rachelle Anne Copina </p>
+    </div>
+
+    <div id="nav-section" class="container-fluid">
+        <center>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="about.html"> About </a>
+                </li>
+                <li class="nav-item">
+                    <a href="collaterals.html"> Collaterals </a>
+                </li>
+                <li class="nav-item">
+                    <a href = "graphicdesigns.html"> Graphic Designs </a>
+                </li>
+                <li class="nav-item">
+                    <a href="photography.html"> Photography </a>
+                </li>
+                <li class="nav-item">
+                    <a href="videos.html"> Videos </a>
+                </li>
+            </ul>
+        </center>
+    </div>
+
+    <div id="graphicdesigns" class="container-fluid">
     <div>
         <img src="assets/images/graphic_designs/pearl.webp" alt="PEARL">
     </div>
@@ -25,3 +61,10 @@
         <img src="assets/images/graphic_designs/teen_mag_3.webp" alt="TEEN MAG 3">
     </div>
 </div>
+
+    <script src="assets/jquery/jquery.min.js"></script>
+    <script src="assets/bootstrap/bootstrap.min.js"></script>
+
+    <script src="scripts/triggers.js"></script>
+</body>
+</html>
