--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         </center>
     </div>
 
+    <div id="about-section" class="container-fluid">
+        <center>
+            <p> some text in the paragraph </p>
+        </center>
+    </div>
+
     <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/bootstrap/bootstrap.min.js"></script>
 
