--- a/graphicdesigns.html
+++ b/graphicdesigns.html
@@ -37,30 +37,22 @@
     </div>
 
     <div id="graphicdesigns" class="container-fluid">
-    <div>
-        <img src="assets/images/graphic_designs/pearl.webp" alt="PEARL">
-    </div>
+        <center>
+            <div>
+                <img src="assets/images/graphic_designs/pearl.webp" alt="PEARL">
 
-    <div>
-        <img src="assets/images/graphic_designs/your_name_engraved.webp" alt="YOUR NAME ENGRAVED">
-    </div>
+                <img src="assets/images/graphic_designs/your_name_engraved.webp" alt="YOUR NAME ENGRAVED">
 
-    <div>
-        <img src="assets/images/graphic_designs/breath_taking.webp" alt="BREATH TAKING">
-    </div>
+                <img src="assets/images/graphic_designs/breath_taking.webp" alt="BREATH TAKING">
 
-    <div>
-        <img src="assets/images/graphic_designs/teen_mag_1.webp" alt="TEEN MAG 1">
-    </div>
+                <img src="assets/images/graphic_designs/teen_mag_1.webp" alt="TEEN MAG 1">
 
-    <div>
-        <img src="assets/images/graphic_designs/teen_mag_2.webp" alt="TEEN MAG 2">
-    </div>
+                <img src="assets/images/graphic_designs/teen_mag_2.webp" alt="TEEN MAG 2">
 
-    <div>
-        <img src="assets/images/graphic_designs/teen_mag_3.webp" alt="TEEN MAG 3">
+                <img src="assets/images/graphic_designs/teen_mag_3.webp" alt="TEEN MAG 3">
+            </div>
+        </center>
     </div>
-</div>
 
     <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/bootstrap/bootstrap.min.js"></script>
