--- a/photography.html
+++ b/photography.html
@@ -37,10 +37,150 @@
     </div>
 
     <div id="photography" class="container-fluid">
-    <div>
-        <p> test 2 </p>
+        <div class="container-fluid">
+            <p> Film Photography </p>
+
+            <center>
+                <div id="film-photography" class="container-fluid">
+                    <img src="assets/images/photography/film_photography/01.webp" alt="Film Photography 01">
+
+                    <img src="assets/images/photography/film_photography/02.webp" alt="Film Photography 02">
+
+                    <img src="assets/images/photography/film_photography/03.webp" alt="Film Photography 03">
+
+                    <img src="assets/images/photography/film_photography/04.webp" alt="Film Photography 04">
+
+                    <img src="assets/images/photography/film_photography/05.webp" alt="Film Photography 05">
+
+                    <img src="assets/images/photography/film_photography/06.webp" alt="Film Photography 06">
+
+                    <img src="assets/images/photography/film_photography/07.webp" alt="Film Photography 07">
+
+                    <img src="assets/images/photography/film_photography/08.webp" alt="Film Photography 08">
+
+                    <img src="assets/images/photography/film_photography/09.webp" alt="Film Photography 09">
+                </div>
+            </center>
+        </div>
+
+        <div class="container-fluid">
+            <p> Landscapes </p>
+
+            <center>
+                <div id="landscapes" class="container-fluid">
+                    <img src="assets/images/photography/landscapes/01.webp" alt="Landscape 01">
+
+                    <img src="assets/images/photography/landscapes/02.webp" alt="Landscape 02">
+
+                    <img src="assets/images/photography/landscapes/03.webp" alt="Landscape 03">
+
+                    <img src="assets/images/photography/landscapes/04.webp" alt="Landscape 04">
+
+                    <img src="assets/images/photography/landscapes/05.webp" alt="Landscape 05">
+
+                    <img src="assets/images/photography/landscapes/06.webp" alt="Landscape 06">
+
+                    <img src="assets/images/photography/landscapes/07.webp" alt="Landscape 07">
+
+                    <img src="assets/images/photography/landscapes/08.webp" alt="Landscape 08">
+
+                    <img src="assets/images/photography/landscapes/09.webp" alt="Landscape 09">
+
+                    <img src="assets/images/photography/landscapes/10.webp" alt="Landscape 10">
+
+                    <img src="assets/images/photography/landscapes/11.webp" alt="Landscape 11">
+
+                    <img src="assets/images/photography/landscapes/12.webp" alt="Landscape 12">
+
+                    <img src="assets/images/photography/landscapes/13.webp" alt="Landscape 13">
+
+                    <img src="assets/images/photography/landscapes/14.webp" alt="Landscape 14">
+
+                    <img src="assets/images/photography/landscapes/15.webp" alt="Landscape 15">
+
+                    <img src="assets/images/photography/landscapes/16.webp" alt="Landscape 16">
+
+                    <img src="assets/images/photography/landscapes/17.webp" alt="Landscape 17">
+
+                    <img src="assets/images/photography/landscapes/18.webp" alt="Landscape 18">
+
+                    <img src="assets/images/photography/landscapes/19.webp" alt="Landscape 19">
+
+                    <img src="assets/images/photography/landscapes/20.webp" alt="Landscape 20">
+
+                    <img src="assets/images/photography/landscapes/21.webp" alt="Landscape 21">
+
+                    <img src="assets/images/photography/landscapes/22.webp" alt="Landscape 22">
+
+                    <img src="assets/images/photography/landscapes/23.webp" alt="Landscape 23">
+
+                    <img src="assets/images/photography/landscapes/24.webp" alt="Landscape 24">
+
+                    <img src="assets/images/photography/landscapes/25.webp" alt="Landscape 25">
+
+                    <img src="assets/images/photography/landscapes/26.webp" alt="Landscape 26">
+
+                    <img src="assets/images/photography/landscapes/27.webp" alt="Landscape 27">
+
+                    <img src="assets/images/photography/landscapes/28.webp" alt="Landscape 28">
+
+                    <img src="assets/images/photography/landscapes/29.webp" alt="Landscape 29">
+
+                    <img src="assets/images/photography/landscapes/30.webp" alt="Landscape 30">
+
+                    <img src="assets/images/photography/landscapes/31.webp" alt="Landscape 31">
+
+                    <img src="assets/images/photography/landscapes/32.webp" alt="Landscape 32">
+
+                    <img src="assets/images/photography/landscapes/33.webp" alt="Landscape 33">
+
+                    <img src="assets/images/photography/landscapes/34.webp" alt="Landscape 34">
+
+                    <img src="assets/images/photography/landscapes/35.webp" alt="Landscape 35">
+
+                    <img src="assets/images/photography/landscapes/36.webp" alt="Landscape 36">
+
+                    <img src="assets/images/photography/landscapes/37.webp" alt="Landscape 37">
+
+                    <img src="assets/images/photography/landscapes/38.webp" alt="Landscape 38">
+
+                    <img src="assets/images/photography/landscapes/39.webp" alt="Landscape 39">
+
+                    <img src="assets/images/photography/landscapes/40.webp" alt="Landscape 40">
+
+                    <img src="assets/images/photography/landscapes/41.webp" alt="Landscape 41">
+
+                    <img src="assets/images/photography/landscapes/42.webp" alt="Landscape 42">
+
+                    <img src="assets/images/photography/landscapes/43.webp" alt="Landscape 43">
+
+                    <img src="assets/images/photography/landscapes/44.webp" alt="Landscape 44">
+
+                    <img src="assets/images/photography/landscapes/45.webp" alt="Landscape 45">
+
+                    <img src="assets/images/photography/landscapes/46.webp" alt="Landscape 46">
+
+                    <img src="assets/images/photography/landscapes/47.webp" alt="Landscape 47">
+
+                    <img src="assets/images/photography/landscapes/48.webp" alt="Landscape 48">
+
+                    <img src="assets/images/photography/landscapes/49.webp" alt="Landscape 49">
+
+                    <img src="assets/images/photography/landscapes/50.webp" alt="Landscape 50">
+
+                    <img src="assets/images/photography/landscapes/51.webp" alt="Landscape 51">
+                </div>
+            </center>
+        </div>
+
+        <div class="container-fluid">
+            <p> Portraits </p>
+        </div>
+
+        <div class="container-fluid">
+            <p> Other Photography </p>
+        </div>
     </div>
-</div>
 
     <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/bootstrap/bootstrap.min.js"></script>
