--- a/photography.html
+++ b/photography.html
@@ -175,6 +175,42 @@
 
         <div class="container-fluid">
             <p> Portraits </p>
+
+            <center>
+                <div id="portraits" class="container-fluid">
+                    <img src="assets/images/photography/portraits/01.webp" alt="Portraits 01">
+
+                    <img src="assets/images/photography/portraits/02.webp" alt="Portraits 02">
+
+                    <img src="assets/images/photography/portraits/03.webp" alt="Portraits 03">
+
+                    <img src="assets/images/photography/portraits/04.webp" alt="Portraits 04">
+
+                    <img src="assets/images/photography/portraits/05.webp" alt="Portraits 05">
+
+                    <img src="assets/images/photography/portraits/06.webp" alt="Portraits 06">
+
+                    <img src="assets/images/photography/portraits/07.webp" alt="Portraits 07">
+
+                    <img src="assets/images/photography/portraits/08.webp" alt="Portraits 08">
+
+                    <img src="assets/images/photography/portraits/09.webp" alt="Portraits 09">
+
+                    <img src="assets/images/photography/portraits/10.webp" alt="Portraits 10">
+
+                    <img src="assets/images/photography/portraits/11.webp" alt="Portraits 11">
+
+                    <img src="assets/images/photography/portraits/12.webp" alt="Portraits 12">
+
+                    <img src="assets/images/photography/portraits/13.webp" alt="Portraits 13">
+
+                    <img src="assets/images/photography/portraits/14.webp" alt="Portraits 14">
+
+                    <img src="assets/images/photography/portraits/15.webp" alt="Portraits 15">
+
+                    <img src="assets/images/photography/portraits/16.webp" alt="Portraits 16">
+                </div>
+            </center>
         </div>
 
         <div class="container-fluid">
