uploads and code adjustments

--- a/photography.html
+++ b/photography.html
@@ -207,6 +207,22 @@
 
         <div class="container-fluid">
             <p> Other Photography </p>
+
+            <center>
+                <div id="others" class="container-fluid">
+                    <img src="assets/images/photography/others/01.webp" alt="Other Photography 01">
+
+                    <img src="assets/images/photography/others/02.webp" alt="Other Photography 02">
+
+                    <img src="assets/images/photography/others/03.webp" alt="Other Photography 03">
+
+                    <img src="assets/images/photography/others/04.webp" alt="Other Photography 04">
+
+                    <img src="assets/images/photography/others/05.webp" alt="Other Photography 05">
+
+                    <img src="assets/images/photography/others/06.webp" alt="Other Photography 06">
+                </div>
+            </center>
         </div>
     </div>
 
