add videos page

--- a/videos.html
+++ b/videos.html
@@ -37,8 +37,15 @@
     </div>
 
     <div id="videos" class="container-fluid">
-    <div>
-        <p> test 3 </p>
+        <center>
+            <iframe src="https://drive.google.com/file/d/17SWWtDJWZhtp4AUER_Z3hZRaiYSvvvNP/preview" allowfullscreen></iframe>
+
+            <iframe src="https://drive.google.com/file/d/1ukDF3_Z-jmqcNsHZ9SH3iaYl42xzsFeN/preview" allowfullscreen></iframe>
+
+            <iframe src="https://www.youtube.com/embed/SWcvUi70-pc?si=-TEn-cfHrepWlVse" allowfullscreen></iframe>
+
+            <iframe src="https://www.youtube.com/embed/CbopbMLrP8c?si=Tc7WsfSn-KlN7AnD" allowfullscreen></iframe>
+        </center>
     </div>
 </div>
 
